# balsa

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  Balsa.idl  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog-2004-2007  ChangeLog.pre-1.0.0  GNOME_Balsa.server.in  HACKING  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  README-CardDAV.md  README-OAuth2.md  README.md  TODO  TRANSLATABLE_FILES  acconfig.h  acinclude.m4  autogen.sh  balsa-mail-style.xml  balsa-mail.lang  balsa-mailto-handler.desktop.in.in  balsa-mailto-handler.desktop.meson  balsa-oauth2.cfg  balsa.1  balsa.1.in  balsa.appdata.xml  balsa.appdata.xml.in  balsa.desktop  balsa.desktop.in  balsa.desktop.in.in  balsa.desktop.meson  balsa.doap  balsa.spec  (+20 more)
c-client/: CFLAGS  Makefile.am  OSCFLAGS  auth_gss.c  auths.c  dummy.c  env.h  env_unix.c  imap4r1.h  iso_8859.c  koi8_r.c  linkage.c  linkage.h  mbx.c  misc.h  os_sco.h  os_sgi.h  os_sv2.h  osdep.c  pop3.c  rfc822.h  tenex.c  unix.c  utf8.h
doc/: ChangeLog  LINGUAS  Makefile.am  balsa.omf.in  meson.build  omf.make  xmldocs.make
doc/C/: .cvsignore  Makefile.am  ab-conf.page  authors.page  balsa-C.omf  balsa-manual-C.omf  balsa.entities  balsa.xml  common-tasks.page  folder-config.page  getting-started.page  glossary.page  identities.page  index.page  introduction.page  its-not-working.page  mbox-formats.page  preferences-address-books.page  preferences-display-options.page  preferences-mail-options.page  preferences-miscellaneous.page  preferences-spelling.page  preferences-startup.page  preferences.page  toolbar-prefs.page  win-composer.page  win-filters.page  win-main.page  win-message.page  win-run-filters.page  win-search.page
doc/cs/: cs.po
doc/de/: .xml2po.mo  ab-conf.page  authors.page  balsa.xml  common-tasks.page  de.po  fdl-appendix.xml  folder-config.page  getting-started.page  glossary.page  identities.page  index.page  introduction.page  its-not-working.page  mbox-formats.page  preferences-address-books.page  preferences-display-options.page  preferences-incoming-and-outgoing-mail.page  preferences-mail-options.page  preferences-miscellaneous.page  preferences-spelling.page  preferences-startup.page  preferences.page  toolbar-prefs.page  win-composer.page  win-filters.page  win-main.page  win-message.page  win-run-filters.page  win-search.page
doc/el/: el.po
idl/: .cvsignore  Makefile.am  balsa-composer.idl  balsa-impl.c  balsa-simple-srv.c  balsa.gnorba  balsa.h  balsa.idl
images/: Makefile.am  meson.build
libbalsa/: .cvsignore  Makefile.am  abook-completion.c  abook-completion.h  address-book-carddav.c  address-book-carddav.h  address-book-extern.c  address-book-extern.h  address-book-gpe.c  address-book-gpe.h  address-book-ldap.c  address-book-ldap.h  address-book-ldif.c  address-book-ldif.h  address-book-osmo.c  address-book-osmo.h  address-book-rubrica.c  address-book-rubrica.h  address-book-text.c  address-book-text.h  address-book-vcard.c  address-book-vcard.h  address-book.c  address-book.h  address-entry.c  address-entry.h  address-view.c  address-view.h  address.c  address.h  application-helpers.c  application-helpers.h  autocrypt.c  autocrypt.h  body.c  body.h  cell-renderer-button.c  cell-renderer-button.h  cfg-backend.c  cfg-backend.h  (+154 more)
libinit_balsa/: .cvsignore  Makefile.am  README  assistant_helper.c  assistant_helper.h  assistant_init.c  assistant_init.h  assistant_page_defclient.c  assistant_page_defclient.h  assistant_page_directory.c  assistant_page_directory.h  assistant_page_finish.c  assistant_page_finish.h  assistant_page_server.c  assistant_page_server.h  assistant_page_user.c  assistant_page_user.h  assistant_page_welcome.c  assistant_page_welcome.h  balsa-druid-page-defclient.c  balsa-druid-page-defclient.h  balsa-druid-page-directory.c  balsa-druid-page-directory.gob  balsa-druid-page-directory.h  balsa-druid-page-error.c  balsa-druid-page-error.gob  balsa-druid-page-error.h  balsa-druid-page-finish.c  balsa-druid-page-finish.gob  balsa-druid-page-finish.h  balsa-druid-page-user.c  balsa-druid-page-user.gob  balsa-druid-page-user.h  balsa-druid-page-welcome.c  balsa-druid-page-welcome.gob  balsa-druid-page-welcome.h  balsa-druid-page.c  balsa-druid-page.gob  balsa-druid-page.h  balsa-initdruid.c  (+7 more)
libmutt/: .cvsignore  ChangeLog  Makefile.am  README  acconfig.h  account.c  addrbook.c  alias.c  attach.c  bind.c  browser.c  browser.h  buffy.c  buffy.h  charset.c  charset.h  color.c  commands.c  complete.c  compose.c  configure.in  copy.c  copy.h  curs_lib.c  curs_main.c  dotlock.c  dotlock.h  edit.c  enter.c  filter.c  flaglib.c  flags.c  from.c  functions.h  getdomain.c  globals.c  globals.h  handler.c  hash.c  hash.h  (+63 more)
libnetclient/: Makefile.am  README  libnetclient.dox  meson.build  net-client-pop.c  net-client-pop.h  net-client-siobuf.c  net-client-siobuf.h  net-client-smtp.c  net-client-smtp.h  net-client-utils.c  net-client-utils.h  net-client.c  net-client.h
sounds/: .cvsignore  Makefile.am  balsa.soundlist  balsa.soundlist.in  email.soundlist  email.soundlist.in  meson.build
src/: .cvsignore  Balsa.idl  Makefile.am  ab-main.c  ab-window.c  ab-window.h  addrbook-manager.c  addrbook-manager.h  addrbook-window.c  addrbook-window.h  addrbook.c  addrbook.h  address-book-config.c  address-book-config.h  address-book.c  address-book.h  addressbook.c  addressbook.h  arrow.xpm  balsa-app.c  balsa-app.h  balsa-bonobo.c  balsa-bonobo.h  balsa-cite-bar.c  balsa-cite-bar.h  balsa-icons.c  balsa-icons.h  balsa-identity.c  balsa-identity.h  balsa-index-page.c  balsa-index-page.h  balsa-index-threading.c  balsa-index-threading.h  balsa-index.c  balsa-index.h  balsa-init.c  balsa-init.h  balsa-mblist.c  balsa-mblist.gob  balsa-mblist.h  (+122 more)
website/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  autogen.sh  bugs.html  bugs.html.in  configure.in  cvs-help.html  download.html  download.html.in  faq.html  faq.html.in  features.html  features.html.in  index.html  index.html.in  list.html  main.html  main.html.in  oldnews.html  screenshots.html  screenshots.html.in  style.css  style.css.in
(+504 files in other folders)
